# ExampleQtTestProject

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  main.cpp  window.cpp  window.h
tests/: CMakeLists.txt  tst_window.cpp
